--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <div class="container-about">
             <h1>À propos de TuniFormatique</h1>
             <br><br><br>
-            <p>Mon sac était une idée de groupe des étudiantes qui voulaient investir dans le domaine de l'informatique en vendant des PC, composants, accessoires & plus avec un profit minime sur le marché et en attirant le plus grand nombre de clients possible grâce à un service fiable et rapide.</p>
+            <p>TuniFormatique était une idée de groupe des étudiantes qui voulaient investir dans le domaine de l'informatique en vendant des PC, composants, accessoires & plus avec un profit minime sur le marché et en attirant le plus grand nombre de clients possible grâce à un service fiable et rapide.</p>
             <p>L'idée a été réalisée en 2025</p>
             <p>Les fondatrices :</p>
             <div class="founders">
