Update product details 3.html

--- a/product details 3.html
+++ b/product details 3.html
@@ -85,8 +85,8 @@
             <p>2500.00 TND</p>
         </div>
         <div class="col-2">
-            <a href="product-details 5.html"><img src="images/product5.png" alt="Produit associé 2"></a>
-            <a href="product-details 5.html"><h4>Pc portable -HP Pavilion 15-cs30005nk</h4></a>
+            <a href="product details 5.html"><img src="images/product5.png" alt="Produit associé 2"></a>
+            <a href="product details 5.html"><h4>Pc portable -HP Pavilion 15-cs30005nk</h4></a>
             <p>2200.00 TND</p>
         </div>
     </div>
