--- a/product details 1.html
+++ b/product details 1.html
@@ -83,8 +83,8 @@
             <p>1200.00 TND</p>
         </div>
         <div class="col-2">
-            <a href="product-details 3.html"><img src="images/product3.jpg" alt="Produit associé 2"></a>
-            <a href="product-details 3.html"><h4>Smartphone-iPhone 13</h4></a>
+            <a href="product details 3.html"><img src="images/product3.jpg" alt="Produit associé 2"></a>
+            <a href="product details 3.html"><h4>Smartphone-iPhone 13</h4></a>
             <p>1100.00 TND</p>
         </div>
     </div>
