Update product details 4.html

--- a/product details 4.html
+++ b/product details 4.html
@@ -37,18 +37,18 @@
     <div class="row">
         <div class="col-2">
             <!-- Main Product Image -->
-            <img src="images/product2.jpg" id="ProductImg" alt="Produit principal" width="100%">
+            <img src="images/product4.png" id="ProductImg" alt="Produit principal" width="100%">
 
             <!-- Small Product Images -->
             <div class="small-img-row">
                 <div class="small-img-col">
-                    <img src="images/product2.png" class="small-img" alt="Produit 1">
+                    <img src="images/product4.png" class="small-img" alt="Produit 1">
                 </div>
                 <div class="small-img-col">
-                    <img src="images/product23.png" class="small-img" alt="Produit 2">
+                    <img src="images/product42.png" class="small-img" alt="Produit 2">
                 </div>
                 <div class="small-img-col">
-                    <img src="images/product22.png" class="small-img" alt="Produit 3">
+                    <img src="images/product43.png  " class="small-img" alt="Produit 3">
                 </div>  
             </div>
         </div>
@@ -85,12 +85,12 @@
     </div>
     <div class="row">
         <div class="col-2">
-            <a href="product details 1.html"><img src="images/product1.jpg" alt="Produit associé 1"></a>
+            <a href="product details 1.html"><img src="images/product1.png" alt="Produit associé 1"></a>
             <a href="product details 1.html"><h4>PC portable Gaming - MSI GP60 2PE Leopard</h4></a>
             <p>2500.00 TND</p>
         </div>
         <div class="col-2">
-            <a href="product details 5.html"><img src="images/product5.jpg" alt="Produit associé 2"></a>
+            <a href="product details 5.html"><img src="images/product5.png" alt="Produit associé 2"></a>
             <a href="product details 5.html"><h4>Pc portable -HP Pavilion 15-cs30005nk</h4></a>
             <p>2200.00 TND</p>
         </div>
